...
        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/cameraSwitchButton"
        android:layout_width="174dp"
        android:layout_height="67dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#6F00FF"
        android:text="@string/switch_camera"
        app:icon="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/uploadImageButton"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF0000"
        android:text="UPLOAD IMAGE"
        app:layout_constraintBottom_toBottomOf="parent"
...
